--- a/src/pug/include/layouts/_layout.pug
+++ b/src/pug/include/layouts/_layout.pug
@@ -36,6 +36,8 @@ html(lang="ru_Ru")
         block footer
           include ../templates/_footer
 
+    include ../parts/_call_modal
+
     script(src="/src/ts/main.ts" type="module")
 
     block scripts
