--- a/src/pug/include/templates/header/_header_center.pug
+++ b/src/pug/include/templates/header/_header_center.pug
@@ -20,7 +20,7 @@
               span Анапа
               br
               strong +7 (985) 575-50-61
-            input.header-center__details__btn(type="button", value="Заказать звонок")
+            input.header-center__details__btn(type="button", value="Заказать звонок" data-modal="#callbackModal")
       form.header-center__search.header-center__search-md(action="/")
         input.header-center__search__input(name="s", placeholder="Поиск по товарам", type="search")
         button.header-center__search__submit(type="submit")
