--- a/src/scss/checkout.page.scss
+++ b/src/scss/checkout.page.scss
@@ -1,9 +1,81 @@
 @import "./modules/vars";
 
+.checkout {
+  &__wrapper {
+    margin-bottom: 197px;
+  }
+
+  &__table {
+    margin-bottom: 30px;
+  }
+
+  &__actions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 18px;
+
+    button {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      height: 60px;
+      width: 258px;
+      padding: 16px 28px;
+      outline: none;
+      cursor: pointer;
+    }
+
+    &__backward {
+      gap: 10px;
+      border-radius: 4px;
+      border: 1px solid #1DA1E2;
+      background-color: #FFF;
+
+      > span {
+        color: #000;
+        font-family: 'RF Dewi', sans-serif;
+        font-size: 13px;
+        font-weight: 700;
+        line-height: 120%;
+        text-transform: uppercase;
+      }
+
+      // &:hover {
+      //   background-color: #1DA1E2;
+      //
+      //   > span {
+      //     color: #FFF;
+      //   }
+      //
+      //   > svg path {
+      //     stroke: #FFF;
+      //   }
+      // }
+    }
+
+    &__order {
+      border-radius: 4px;
+      background-color: #1DA1E2;
+      border: 1px solid #1DA1E2;
+      color: #FFF;
+      font-family: 'RF Dewi', sans-serif;
+      font-size: 13px;
+      font-weight: 800;
+      line-height: 120%;
+      text-transform: uppercase;
+
+      &:hover {
+        opacity: .8;
+      }
+    }
+  }
+}
+
 .order-table {
   border-collapse: initial;
   border-spacing: 0 18px;
-  margin-bottom: 197px;
   width: 100%;
   table-layout: fixed;
 
@@ -68,7 +140,7 @@
   }
 
   &__stock__shell {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     column-gap: 8px;
@@ -138,6 +210,84 @@
 
     span {
       font-weight: 700;
+    }
+  }
+}
+
+@media (max-width: #{map-get($bp_sizes, lg)-1}) {
+  .order-table {
+    colgroup {
+      display: none;
+    }
+
+    td {
+      padding-top: 18px;
+      padding-bottom: 18px;
+    }
+
+    tfoot {
+      td:first-child {
+        display: none;
+      }
+
+      td {
+        display: inline-block;
+        width: 100%;
+      }
+    }
+
+    tbody {
+      td {
+        display: inline-block;
+        width: 50%;
+      }
+
+      td:nth-child(1) {
+        width: 25%;
+      }
+
+      td:nth-child(2) {
+        width: 75%;
+      }
+
+      td:nth-child(3) {
+        width: 32.5%;
+      }
+
+      td:nth-child(4) {
+        width: 32.5%;
+      }
+
+      td:last-child {
+        width: 35%;
+        text-align: right;
+      }
+    }
+  }
+}
+
+@media (max-width: #{map-get($bp_sizes, md)-1}) {
+  .order-table {
+    td {
+      padding-top: 15px;
+      padding-bottom: 15px;
+    }
+
+    tbody {
+      td:nth-child(3) {
+        width: 50%;
+      }
+
+      td:nth-child(4) {
+        width: 50%;
+      }
+
+      td:last-child {
+        display: block;
+        width: 100%;
+        text-align: center;
+        padding-right: 5px;
+      }
     }
   }
 }
